Integration tests for spring plugin added
git-svn-id: https://svn.apache.org/repos/asf/cxf/fediz/trunk@1435185 13f79535-47bb-0310-9956-ffa450edef68