@@ -158,6 +158,13 @@
                                     <type>war</type>
                                     <overWrite>true</overWrite>
                                 </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.apache.cxf.fediz.systests</groupId>
+                                    <artifactId>systests-springWebapp</artifactId>
+                                    <version>${project.version}</version>
+                                    <type>war</type>
+                                    <overWrite>true</overWrite>
+                                </artifactItem>                                
                             </artifactItems>
                             <outputAbsoluteArtifactFilename>true</outputAbsoluteArtifactFilename>
                             <outputDirectory>target</outputDirectory>
@@ -189,6 +196,7 @@
                             <includes>
                                 <include>**/integrationtests/**</include>
                             </includes>
+                            <argLine>-XX:MaxPermSize=512M</argLine>
                         </configuration>
                     </execution>
                     <execution>
